chore: fixed done button spacing in the option dialog

--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
@@ -112,7 +112,7 @@
 }
 
 .margin-fix {
-  margin: 0 20px 0;
+  margin: 0 20px 20px;
 }
 
 .max-height-200 {
